feat(footer) copyright symbol changed

--- a/Tamrin.html
+++ b/Tamrin.html
@@ -7,8 +7,8 @@
 		<meta name="keywords" content="HTML, Tuterial, CSS, JS">
 		<meta name="description" content="A Simple HTML Page.">
 		<meta http-equiv="refresh" content="300">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="pics/Favicon.png">
     </head>
     <body>
@@ -54,7 +54,7 @@
 			<p>Apple preparing to unveil iPhone subscription service, according to report:</p>
 			<blockquote cite="https://www.macworld.com/article/921042/apple-unveil-iphone-subscription-service.html">
 				This Wednesday Apple will launch new iPhones, but the Far Out event could also see 
-				the announcement of a new way of buying and selling the company’s phones.
+				the announcement of a new way of buying and selling the companies phones.
 			</blockquote>
 			<p>we use <abbr title="world wide web">www</abbr> before domain names</p>
 			<address>
@@ -88,11 +88,25 @@
 			</a><br><hr>
 			<p id="1" style="border:1px solid;overflow:hidden;padding:10px;">
 				<img src="Pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+				Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, 
+				vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, 
+				ultrices nec congue eget, auctor vitae massa. 
+				Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, 
+				facilisis sed ornare eu, lobortis in odio. 
+				Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+				Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
 			</p>
 			<p id="2" style="border:1px solid;overflow:hidden;padding:10px;">
 				<img src="Pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+				Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, 
+				vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, 
+				ultrices nec congue eget, auctor vitae massa. 
+				Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, 
+				facilisis sed ornare eu, lobortis in odio. 
+				Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
+				Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
 			</p>
 			<br>
 			<img src="Pics/Coffee-laptop.jpg" alt="Coffe and laptop" usemap="#lap-cof">
@@ -181,9 +195,11 @@
 				<li>Contact us</li>
 			</ul>
 			<h2 id="omid-website"> Omid Azami Website</h2>
-			<iframe src="https://omidazami.ir/" width="1210px" height="720px" title="Iframe Example"></iframe>
+			<iframe src="https://omidazami.ir/" width="1210px" height="720px" 
+			title="Iframe Example"></iframe>
             <br><hr>
-			<button type="button" onclick="document.getElementById('omid').innerHTML ='Sanaz'">Click here</button>
+			<button type="button" onclick="document.getElementById('omid').innerHTML ='Sanaz'">
+				Click here</button>
 			<h1 id="omid">Omid</h1>
 			<div class="simple-menu">
 				<div class="left-menu"><p>Left Menu</p></div>
@@ -239,7 +255,7 @@
 						</p>
 					</div>
 				</div>	
-				<div class="simple-website-footer">© copyright Omid Azami</div>
+				<div class="simple-website-footer">&copy; copyright Omid Azami</div>
 			</div>
 		</div>
     </body>
