--- a/Tamrin.html
+++ b/Tamrin.html
@@ -80,14 +80,14 @@
 			<br><br>
 			<button onclick="document.location='contact.html'">contact page</button>
 			<br><hr>
-			<!-- <img src="Pics/Walking-Dead.jpg" alt="walking dead poster"><br> -->
+			<!-- <img src="pics/Walking-Dead.jpg" alt="walking dead poster"><br> -->
 			<img src="https://biz-cdn.varzesh3.com/banners/2022/11/09/1ec515b7-9139-4b20-a614-94091b8632a0.gif" alt="Smartphone Ads" class="center">
 			<br>
 			<a href="https://www.imdb.com/title/tt1520211/" target="_blank">
 				<img src="pics/WD-Poster.jpg" alt="Walking-Dead poster" width="100%" height="180%">
 			</a><br><hr>
 			<p id="1" style="border:1px solid;overflow:hidden;padding:10px;">
-				<img src="Pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
+				<img src="pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, 
 				vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, 
@@ -98,7 +98,7 @@
 				Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
 			</p>
 			<p id="2" style="border:1px solid;overflow:hidden;padding:10px;">
-				<img src="Pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
+				<img src="pics/Deryl.jpeg" alt="Walking-Dead poster" style="float:right;width:80px;height:80px;">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, 
 				vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, 
@@ -109,7 +109,7 @@
 				Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac...
 			</p>
 			<br>
-			<img src="Pics/Coffee-laptop.jpg" alt="Coffe and laptop" usemap="#lap-cof">
+			<img src="pics/Coffee-laptop.jpg" alt="Coffe and laptop" usemap="#lap-cof">
 				<map name="lap-cof">
 					<area shape="rec" coords="0,0,215,310" alt="laptop" href="https://google.com">
 					<area shape="circle" coords="473,78,47" alt="coffee" href="https://time.ir">
