feat(*): add 2 more click button with JS

--- a/Tamrin.html
+++ b/Tamrin.html
@@ -199,8 +199,12 @@
 			title="Iframe Example"></iframe>
             <br><hr>
 			<button type="button" onclick="document.getElementById('omid').innerHTML ='Sanaz'">
-				Click here</button>
-			<h1 id="omid">Omid</h1>
+				Click here for Sanaz</button>
+			<button type="button" onclick="document.getElementById('omid').innerHTML ='Omid'">
+				Click here for Omid</button>
+			<button type="button" onclick="document.getElementById('omid').innerHTML ='Tada!'">
+				reset</button>
+			<h1 id="omid">Tada!</h1>
 			<div class="simple-menu">
 				<div class="left-menu"><p>Left Menu</p></div>
 				<div class="main-menu"><p>Main Menu</p></div>
